--- a/app/Resources/FOSUserBundle/views/Profile/edit.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/edit.html.twig
@@ -76,7 +76,7 @@
   <div class="panel-tab-body">
     <div class="account-content">
       <div class="row">
-        <div class="col-xs-12 col-sm-6">
+        <div class="col-xs-12 col-sm-6 col-sm-offset-3">
           {{ form_errors(form) }}
           <div class="title text-uppercase"><div>Профиль</div></div>
           {{ form_start(form, {'action': path('fos_user_profile_edit'), 'attr': {'id': 'registration_form'}}) }}
