--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -2,10 +2,9 @@
 
 {% block fos_user_content %}
     <div class="greenLine"></div>
-    <div class="container">
+    <div class="panel-tab-body">
         <div class="row">
-            <div class="col-sm-6">
-
+            <div class="col-xs-12 col-sm-8 col-sm-offset-2">
                 <div class="registration container-fluid">
                     {#<div class="socBnts top">#}
                     {% if error %}
