--- a/app/Resources/FOSUserBundle/views/Registration/register.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register.html.twig
@@ -60,9 +60,9 @@
 
         });
     </script>
-    <div class="container main-registration">
+    <div class="panel-tab-body">
         <div class="row">
-            <div class="col-xs-5">
+            <div class="col-xs-12 col-sm-8 col-sm-offset-2">
                 <div class="title text-uppercase"><div>Регистрация</div></div>
                 <br />
                 {{ form_start(form, {'action': path('fos_user_registration_register'), 'attr': {'id': 'registration_form'}}) }}
