--- a/app/Resources/FOSUserBundle/views/Resetting/reset.html.twig
+++ b/app/Resources/FOSUserBundle/views/Resetting/reset.html.twig
@@ -1,4 +1,4 @@
-{% extends "FOSUserBundle::layout.html.twig" %}
+{% extends '@FOSUser/fos_layout.html.twig' %}
 
 {% block fos_user_content %}
 
@@ -8,9 +8,9 @@
 			{#{{ 'resetting.request.invalid_username'|trans({'%username%': invalid_username}) }}#}
 		</div>
 	{% endif %}
-	<div class="container">
+	<div class="panel-tab-body">
 		<div class="row">
-			<div class="col-sm-6">
+			<div class="col-xs-12 col-sm-8 col-sm-offset-2">
 				<div class="registration" style="margin-top: 20px;">
 					<div class="box-login">
 						<div class="lost-field-box">
