add seo for standarts & calcs

--- a/src/AppBundle/Resources/views/Abbreviation/abbreviations.html.twig
+++ b/src/AppBundle/Resources/views/Abbreviation/abbreviations.html.twig
@@ -10,6 +10,11 @@
     </style>
 {% endblock %}
 
+{% block seo %}
+    <title>Медицинские сокращения и термины</title>
+    <meta name="description" content="Медицинские сокращения с расшивровкой и термины для врачей на сайте medalmanah.ru"/>
+{% endblock %}
+
 
 {% block content %}
         <div class="title"><div>Медицинские сокращения и термины</div></div>
