--- a/src/AppBundle/Resources/views/Calculator/ocenkaClirensaCreatinina.html.twig
+++ b/src/AppBundle/Resources/views/Calculator/ocenkaClirensaCreatinina.html.twig
@@ -1,5 +1,10 @@
 {% extends 'AppBundle::layout.html.twig' %}
 
+{% block seo %}
+    <title>Оценка клиренса креатинина (взрослые)</title>
+    <meta name="description" content="Оценка клиренса креатинина (взрослые) - Калькулятор для врачей на сайте medalmanah.ru"/>
+{% endblock %}
+
 {% block content %}
     <div class="title"><div>Оценка клиренса креатинина (взрослые)</div></div>
     <br />
