--- a/src/AppBundle/Resources/public/less/common.less
+++ b/src/AppBundle/Resources/public/less/common.less
@@ -649,6 +649,7 @@ th.prev, th.next, th.picker-switch{
                 position: absolute;
                 color: #FFF;
                 text-align: center;
+                font-size: 12px;
             }
         }
     }
