--- a/src/AppBundle/Resources/views/Calendar/calendar.html.twig
+++ b/src/AppBundle/Resources/views/Calendar/calendar.html.twig
@@ -25,7 +25,7 @@
 
 {% block stylesheets %}
     {{ parent() }}
-    {#<link rel="stylesheet" type="text/css" href="{{ asset('bundles/app/stylesheets/calendar.css') }}"/>#}
+    <link rel="stylesheet" type="text/css" href="{{ asset('bundles/app/css/calendar.css') }}"/>
 {% endblock %}
 
 
