--- a/src/AppBundle/Resources/views/Info/test_mail.html.twig
+++ b/src/AppBundle/Resources/views/Info/test_mail.html.twig
@@ -1,14 +1,14 @@
 <html>
-<body>
+<body style="font-family: Arial, Tahoma, sans-serif; background: url('http://medalmanah.ru/bundles/app/images/light_toast.png')" background="http://medalmanah.ru/bundles/app/images/light_toast.png" bgcolor="#EEE">
 <table style="width: 600px" width="600" cellpadding="0" cellspacing="0">
     <tr>
         <td style="background: #f00000; font-size: 10px" colspan="2"><br /></td>
     </tr>
     <tr>
-        <td style="" colspan="2"><br /></td>
+        <td style="background: #FFF" bgcolor="#FFF" colspan="2"><br /></td>
     </tr>
     <tr>
-        <td colspan="2">
+        <td colspan="2" style="background: #FFF" bgcolor="#FFF">
             <table cellpadding="0" cellspacing="0" style="width: 100%; padding: 0 30px" width="100%">
                 <tr>
                     <td style="text-align: center; font-size: 20px" align="center">
@@ -22,54 +22,60 @@
         </td>
     </tr>
     <tr>
-        <td style="" colspan="2"><br /></td>
+        <td style="background: #FFF" bgcolor="#FFF" colspan="2"><br /></td>
     </tr>
     <tr>
         <td style="background: #f00000; font-size: 5px" colspan="2"><br /></td>
     </tr>
     <tr>
-        <td style="" colspan="2"><br /></td>
+        <td style="background: #FFF" bgcolor="#FFF" colspan="2"><br /></td>
     </tr>
     <tr>
         <td colspan="2">
-            <table cellpadding="0" cellspacing="0" style="width: 100%; padding: 0 30px" width="100%">
+            <table cellpadding="0" cellspacing="0" style="width: 100%;" width="100%">
                 <tr>
-                    <td style="text-align: left; font-size: 16px" align="left" colspan="2">
-                        На прошлой неделе мы объявили конкурс эссе на тему «…И тут я понял(а), что мне пора в отпуск».
-                        Большое спасибо всем откликнувшимся за прекрасные рассказы, сочинения, истории из практики.
-                        Сегодня завершился прием работ на конкурс. Ниже представлены эссе, участвующие в голосовании.
-                        Дорогие коллеги, пожалуйста, проголосуйте за понравившуюся работу, написав к ней комментарий.
-                        Поддержим коллег!
+                    <td style="text-align: justify; font-size: 16px; background: #FFF; padding: 0 30px" align="left" colspan="2" bgcolor="#FFF">
+                        &nbsp;&nbsp;&nbsp;&nbsp;Уважаемый Коллега! рады представить Вам портал, на котором собранны практически
+                        все предстоящие
+                        события мира медицины как в России, так и в других странах. Мы стараемся анонсировать и осветить
+                        каждое мероприятие, которое может быть Вам интересно. Также на нашем портале Вы сможете ознакомиться
+                        с последними новостями вашей специализации, рассмотреть интересные клинические случаи,прослушать
+                        вебинары ведущих специалистов.
                     </td>
                 </tr>
             </table>
         </td>
     </tr>
     <tr>
-        <td style="" colspan="2"><br /></td>
+        <td style="background: #FFF" bgcolor="#FFF" colspan="2"><br /></td>
     </tr>
     <tr>
         <td style="background: #f00000; font-size: 5px" colspan="2"><br /></td>
     </tr>
     <tr>
-        <td style="" colspan="2"><br /></td>
+        <td style="background: #FFF" bgcolor="#FFF" colspan="2"><br /></td>
     </tr>
     <tr>
-        <td style="padding-left: 50px; font-size: 24px; color: #555" colspan="2"><a style="color: #555; text-decoration: none" href="{{ url('news') }}">Интересные новости</a></td>
+        <td style="padding-left: 50px; font-size: 24px; color: #555; background: #FFF" colspan="2" bgcolor="#FFF">
+            <a style="color: #555; text-decoration: none" href="{{ url('events') }}">Ближайшие события</a>
+        </td>
     </tr>
     <tr>
-        <td style="" colspan="2"><br /></td>
+        <td style="background: #FFF" bgcolor="#FFF" colspan="2"><br /></td>
     </tr>
     <tr>
         <td style="background: #f00000; font-size: 5px" colspan="2"><br /></td>
     </tr>
     <tr>
-        <td style="" colspan="2"><br /></td>
+        <td style="background: #FFF" bgcolor="#FFF" colspan="2"><br /></td>
     </tr>
     <tr>
         <td colspan="2">
-            <table cellpadding="0" cellspacing="0" style="width: 100%; padding: 0 30px" width="100%">
+            <table cellpadding="10" cellspacing="0" style="width: 100%;" width="100%">
                 <tr>
+                    <td colspan="2" style="font-size: 0px"><br /></td>
+                </tr>
+                <tr style="background: #FFF; padding: 10px" bgcolor="#FFF">
                     <td style="text-align: left; width: 200px; vertical-align: top" align="left" valign="top" >
                         <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px"><img src="http://medalmanah.ru/upload/publication/1469210649.png" style="width: 160px"></span>
                     </td>
@@ -80,9 +86,104 @@
                     </td>
                 </tr>
                 <tr>
-                    <td style="" colspan="2"><br /></td>
+                    <td colspan="2" style="font-size: 0px"><br /></td>
+                </tr>
+                <tr style="background: #FFF" bgcolor="#FFF">
+                    <td style="text-align: left; width: 200px; vertical-align: top" align="left" valign="top" >
+                        <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px"><img src="http://medalmanah.ru/upload/publication/1469210649.png" style="width: 160px"></span>
+                    </td>
+                    <td style="text-align: left; font-size: 16px" align="left" >
+                        <span style="color: #777">22.07.2016</span><br />
+                        <div><strong>Не только иммунитет</strong></div>
+                        <p>Сенсационное исследование, опубликованное в Nature, установило захватывающую и неожиданную связь социального поведения и иммунной системы.</p>
+                    </td>
                 </tr>
                 <tr>
+                    <td colspan="2" style="font-size: 0px"><br /></td>
+                </tr>
+                <tr style="background: #FFF" bgcolor="#FFF">
+                    <td style="text-align: left; width: 200px; vertical-align: top" align="left" valign="top" >
+                        <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px"><img src="http://medalmanah.ru/upload/publication/1469210649.png" style="width: 160px"></span>
+                    </td>
+                    <td style="text-align: left; font-size: 16px" align="left" >
+                        <span style="color: #777">22.07.2016</span><br />
+                        <div><strong>Не только иммунитет</strong></div>
+                        <p>Сенсационное исследование, опубликованное в Nature, установило захватывающую и неожиданную связь социального поведения и иммунной системы.</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2" style="font-size: 0px"><br /></td>
+                </tr>
+                <tr style="background: #FFF" bgcolor="#FFF">
+                    <td style="text-align: left; width: 200px; vertical-align: top" align="left" valign="top" >
+                        <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px"><img src="http://medalmanah.ru/upload/publication/1469210649.png" style="width: 160px"></span>
+                    </td>
+                    <td style="text-align: left; font-size: 16px" align="left" >
+                        <span style="color: #777">22.07.2016</span><br />
+                        <div><strong>Не только иммунитет</strong></div>
+                        <p>Сенсационное исследование, опубликованное в Nature, установило захватывающую и неожиданную связь социального поведения и иммунной системы.</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2" style="font-size: 0px"><br /></td>
+                </tr>
+                <tr style="background: #FFF" bgcolor="#FFF">
+                    <td style="text-align: left; width: 200px; vertical-align: top" align="left" valign="top" >
+                        <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px"><img src="http://medalmanah.ru/upload/publication/1469210649.png" style="width: 160px"></span>
+                    </td>
+                    <td style="text-align: left; font-size: 16px" align="left" >
+                        <span style="color: #777">22.07.2016</span><br />
+                        <div><strong>Не только иммунитет</strong></div>
+                        <p>Сенсационное исследование, опубликованное в Nature, установило захватывающую и неожиданную связь социального поведения и иммунной системы.</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2" style="font-size: 0px"><br /></td>
+                </tr>
+            </table>
+        </td>
+    </tr>
+    <tr>
+        <td style="background: #FFF" bgcolor="#FFF" colspan="2"><br /></td>
+    </tr>
+    <tr>
+        <td style="background: #f00000; font-size: 5px" colspan="2"><br /></td>
+    </tr>
+    <tr>
+        <td style="background: #FFF" bgcolor="#FFF" colspan="2"><br /></td>
+    </tr>
+    <tr>
+        <td style="padding-left: 50px; font-size: 24px; color: #555; background: #FFF" bgcolor="#FFF" colspan="2"><a style="color: #555; text-decoration: none" href="{{ url('news') }}">Интересные новости</a></td>
+    </tr>
+    <tr>
+        <td style="background: #FFF" bgcolor="#FFF" colspan="2"><br /></td>
+    </tr>
+    <tr>
+        <td style="background: #f00000; font-size: 5px" colspan="2"><br /></td>
+    </tr>
+    <tr>
+        <td style="background: #FFF" bgcolor="#FFF" colspan="2"><br /></td>
+    </tr>
+    <tr>
+        <td colspan="2">
+            <table cellpadding="10" cellspacing="0" style="width: 100%;" width="100%">
+                <tr>
+                    <td colspan="2" style="font-size: 0px"><br /></td>
+                </tr>
+                <tr style="background: #FFF" bgcolor="#FFF">
+                    <td style="text-align: left; width: 200px; vertical-align: top" align="left" valign="top" >
+                        <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px"><img src="http://medalmanah.ru/upload/publication/1469210649.png" style="width: 160px"></span>
+                    </td>
+                    <td style="text-align: left; font-size: 16px" align="left" >
+                        <span style="color: #777">22.07.2016</span><br />
+                        <div><strong>Не только иммунитет</strong></div>
+                        <p>Сенсационное исследование, опубликованное в Nature, установило захватывающую и неожиданную связь социального поведения и иммунной системы.</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2" style="font-size: 0px"><br /></td>
+                </tr>
+                <tr style="background: #FFF" bgcolor="#FFF">
                     <td style="text-align: left; width: 200px; vertical-align: top" align="left" valign="top" >
                         <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px"><img src="http://medalmanah.ru/upload/publication/1469196541.png" style="width: 160px"></span>
                     </td>
@@ -94,9 +195,9 @@
                     </td>
                 </tr>
                 <tr>
-                    <td style="" colspan="2"><br /></td>
+                    <td colspan="2" style="font-size: 0px"><br /></td>
                 </tr>
-                <tr>
+                <tr style="background: #FFF" bgcolor="#FFF">
                     <td style="text-align: left; width: 200px; vertical-align: top" align="left" valign="top" >
                         <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px"><img src="http://medalmanah.ru/upload/publication/1469192967.png" style="width: 160px"></span>
                     </td>
@@ -108,9 +209,9 @@
                     </td>
                 </tr>
                 <tr>
-                    <td style="" colspan="2"><br /></td>
+                    <td colspan="2" style="font-size: 0px"><br /></td>
                 </tr>
-                <tr>
+                <tr style="background: #FFF" bgcolor="#FFF">
                     <td style="text-align: left; width: 200px; vertical-align: top" align="left" valign="top" >
                         <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px"><img src="http://medalmanah.ru/upload/publication/1469120806.png" style="width: 160px"></span>
                     </td>
@@ -121,111 +222,23 @@
                         <p>Нейрофизиологи из Университета Чикаго (США) установили, что лечение мышей антибиотиками широкого спектра в течение длительного периода уменьшает бляшки, вызывающие болезнь Альцгеймера, и повышает воспалительный статус клеток микроглии головного мозга.</p>
                     </td>
                 </tr>
-            </table>
-        </td>
-    </tr>
-    <tr>
-        <td style="" colspan="2"><br /></td>
-    </tr>
-    <tr>
-        <td style="background: #f00000; font-size: 5px" colspan="2"><br /></td>
-    </tr>
-    <tr>
-        <td style="" colspan="2"><br /></td>
-    </tr>
-    <tr>
-        <td style="padding-left: 50px; font-size: 24px; color: #555" colspan="2"><a style="color: #555; text-decoration: none" href="{{ url('events') }}">Ближайшие события</a></td>
-    </tr>
-    <tr>
-        <td style="" colspan="2"><br /></td>
-    </tr>
-    <tr>
-        <td style="background: #f00000; font-size: 5px" colspan="2"><br /></td>
-    </tr>
-    <tr>
-        <td style="" colspan="2"><br /></td>
-    </tr>
-    <tr>
-        <td colspan="2">
-            <table cellpadding="0" cellspacing="0" style="width: 100%; padding: 0 30px" width="100%">
                 <tr>
-                    <td style="text-align: left; width: 200px; vertical-align: top" align="left" valign="top" >
-                        <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px"><img src="http://medalmanah.ru/upload/publication/1469210649.png" style="width: 160px"></span>
-                    </td>
-                    <td style="text-align: left; font-size: 16px" align="left" >
-                        <span style="color: #777">22.07.2016</span><br />
-                        <div><strong>Не только иммунитет</strong></div>
-                        <p>Сенсационное исследование, опубликованное в Nature, установило захватывающую и неожиданную связь социального поведения и иммунной системы.</p>
-                    </td>
-                </tr>
-                <tr>
-                    <td style="" colspan="2"><br /></td>
-                </tr>
-                <tr>
-                    <td style="text-align: left; width: 200px; vertical-align: top" align="left" valign="top" >
-                        <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px"><img src="http://medalmanah.ru/upload/publication/1469210649.png" style="width: 160px"></span>
-                    </td>
-                    <td style="text-align: left; font-size: 16px" align="left" >
-                        <span style="color: #777">22.07.2016</span><br />
-                        <div><strong>Не только иммунитет</strong></div>
-                        <p>Сенсационное исследование, опубликованное в Nature, установило захватывающую и неожиданную связь социального поведения и иммунной системы.</p>
-                    </td>
-                </tr>
-                <tr>
-                    <td style="" colspan="2"><br /></td>
-                </tr>
-                <tr>
-                    <td style="text-align: left; width: 200px; vertical-align: top" align="left" valign="top" >
-                        <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px"><img src="http://medalmanah.ru/upload/publication/1469210649.png" style="width: 160px"></span>
-                    </td>
-                    <td style="text-align: left; font-size: 16px" align="left" >
-                        <span style="color: #777">22.07.2016</span><br />
-                        <div><strong>Не только иммунитет</strong></div>
-                        <p>Сенсационное исследование, опубликованное в Nature, установило захватывающую и неожиданную связь социального поведения и иммунной системы.</p>
-                    </td>
-                </tr>
-                <tr>
-                    <td style="" colspan="2"><br /></td>
-                </tr>
-                <tr>
-                    <td style="text-align: left; width: 200px; vertical-align: top" align="left" valign="top" >
-                        <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px"><img src="http://medalmanah.ru/upload/publication/1469210649.png" style="width: 160px"></span>
-                    </td>
-                    <td style="text-align: left; font-size: 16px" align="left" >
-                        <span style="color: #777">22.07.2016</span><br />
-                        <div><strong>Не только иммунитет</strong></div>
-                        <p>Сенсационное исследование, опубликованное в Nature, установило захватывающую и неожиданную связь социального поведения и иммунной системы.</p>
-                    </td>
-                </tr>
-                <tr>
-                    <td style="" colspan="2"><br /></td>
-                </tr>
-                <tr>
-                    <td style="text-align: left; width: 200px; vertical-align: top" align="left" valign="top" >
-                        <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px"><img src="http://medalmanah.ru/upload/publication/1469210649.png" style="width: 160px"></span>
-                    </td>
-                    <td style="text-align: left; font-size: 16px" align="left" >
-                        <span style="color: #777">22.07.2016</span><br />
-                        <div><strong>Не только иммунитет</strong></div>
-                        <p>Сенсационное исследование, опубликованное в Nature, установило захватывающую и неожиданную связь социального поведения и иммунной системы.</p>
-                    </td>
-                </tr>
-                <tr>
-                    <td style="" colspan="2"><br /></td>
+                    <td colspan="2" style="font-size: 0px"><br /></td>
                 </tr>
             </table>
         </td>
     </tr>
+
     <tr>
-        <td style="" colspan="2"><br /></td>
+        <td style="background: #FFF" bgcolor="#FFF" colspan="2"><br /></td>
     </tr>
     <tr>
         <td style="background: #f00000; font-size: 5px" colspan="2"><br /></td>
     </tr>
     <tr>
-        <td style="" colspan="2"><br /></td>
+        <td style="background: #FFF" bgcolor="#FFF" colspan="2"><br /></td>
     </tr>
-    <tr>
+    <tr style="background: #FFF" bgcolor="#FFF">
         <td style="text-align: center; font-size: 24px; color: #555" colspan="2">
             С уважением, служба поддержки medalmanah.ru
             <div style="font-size: 13px">
@@ -234,7 +247,7 @@
         </td>
     </tr>
     <tr>
-        <td style="" colspan="2"><br /></td>
+        <td style="background: #FFF" bgcolor="#FFF" colspan="2"><br /></td>
     </tr>
 </table>
 </body>
