update index carusel

--- a/src/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/AppBundle/Resources/views/Default/index.html.twig
@@ -13,7 +13,7 @@
                 {% if carusel.preview.path is defined %}
                     <div class="item">
                         <div>
-                            <a href="{{ path('event',{'url' : carusel.slug }) }}"><img src="{{ carusel.preview.path }}" title="{{ carusel.title }}"></a>
+                            <a href="{{ path('event',{'url' : carusel.id }) }}"><img src="{{ carusel.preview.path }}" title="{{ carusel.title }}"></a>
                             <div class="event-date">
                                 {{ carusel.start | date('d') }}
                                 <br />
