remove share in list

--- a/src/AppBundle/Resources/views/Publication/publication.item.html.twig
+++ b/src/AppBundle/Resources/views/Publication/publication.item.html.twig
@@ -29,6 +29,6 @@
         <a href="{{ path('publications',{'url' : (publication.slug != null ? publication.slug : publication.id) }) }}#comment" class="publication-comment"><span class="glyphicon glyphicon-comment"></span> {{ publication.comments | length }} <span class="hidden-xs">комментариев</span></a>
     </div>
     <div class="col-xs-4 text-right">
-        <span class="publication-share"><span class="hidden-xs">Рассказать</span> <span class="glyphicon glyphicon-share-alt"></span></span>
+        {#<span class="publication-share"><span class="hidden-xs">Рассказать</span> <span class="glyphicon glyphicon-share-alt"></span></span>#}
     </div>
 </div>
