--- a/src/AppBundle/Resources/views/Publication/eventList.html.twig
+++ b/src/AppBundle/Resources/views/Publication/eventList.html.twig
@@ -39,16 +39,16 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="form-group col-sm-5">
+                    <div class="form-group col-sm-5 col-xs-12">
                         {{ form_widget(form.specialty) }}
                     </div>
-                    <div class="form-group col-sm-2 text-right">
+                    <div class="form-group col-sm-2 col-xs-4 text-right">
                         {{ form_widget(form.start) }}
                     </div>
-                    <div class="form-group col-sm-2 text-right">
+                    <div class="form-group col-sm-2 col-xs-4 text-right">
                         {{ form_widget(form.end) }}
                     </div>
-                    <div class="form-group  col-sm-3 text-right">
+                    <div class="form-group  col-sm-3 col-xs-4 text-right">
                         {{ form_widget(form.submit) }}
                         {#<a href="{{ path('event_add') }}" style="padding-left: 35px;">Добавить событие</a>#}
                     </div>
