--- a/src/AppBundle/Resources/views/Publication/eventList.html.twig
+++ b/src/AppBundle/Resources/views/Publication/eventList.html.twig
@@ -23,7 +23,7 @@
             width: 130px;
         }
         #form_specialty{
-            width: 250px;
+            max-width: 250px;
         }
     </style>
 {% endblock %}
@@ -42,13 +42,13 @@
                     <div class="form-group col-sm-5 col-xs-12">
                         {{ form_widget(form.specialty) }}
                     </div>
-                    <div class="form-group col-sm-2 col-xs-4 text-right">
+                    <div class="form-group col-sm-2 col-xs-12 text-right">
                         {{ form_widget(form.start) }}
                     </div>
-                    <div class="form-group col-sm-2 col-xs-4 text-right">
+                    <div class="form-group col-sm-2 col-xs-12 text-right">
                         {{ form_widget(form.end) }}
                     </div>
-                    <div class="form-group  col-sm-3 col-xs-4 text-right">
+                    <div class="form-group  col-sm-3 col-xs-12 text-right">
                         {{ form_widget(form.submit) }}
                         {#<a href="{{ path('event_add') }}" style="padding-left: 35px;">Добавить событие</a>#}
                     </div>
