update event filter

--- a/src/AppBundle/Resources/views/Publication/eventList.html.twig
+++ b/src/AppBundle/Resources/views/Publication/eventList.html.twig
@@ -20,10 +20,10 @@
     <link rel="stylesheet" href="{{ asset('assets/vendor/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css') }}" />
     <style>
         #form_start, #form_end{
-            width: 130px;
+            /*max-width: 130px;*/
         }
         #form_specialty{
-            max-width: 250px;
+            /*max-width: 250px;*/
         }
     </style>
 {% endblock %}
@@ -39,16 +39,16 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="form-group col-sm-5 col-xs-12">
+                    <div class="form-group col-md-5 col-sm-12">
                         {{ form_widget(form.specialty) }}
                     </div>
-                    <div class="form-group col-sm-2 col-xs-12 text-right">
+                    <div class="form-group col-md-2 col-sm-12 text-right">
                         {{ form_widget(form.start) }}
                     </div>
-                    <div class="form-group col-sm-2 col-xs-12 text-right">
+                    <div class="form-group col-md-2 col-sm-12 text-right">
                         {{ form_widget(form.end) }}
                     </div>
-                    <div class="form-group  col-sm-3 col-xs-12 text-right">
+                    <div class="form-group  col-md-3 col-sm-12 text-right">
                         {{ form_widget(form.submit) }}
                         {#<a href="{{ path('event_add') }}" style="padding-left: 35px;">Добавить событие</a>#}
                     </div>
