--- a/src/AppBundle/Resources/views/Calculator/ocenkaClirensaCreatinina.html.twig
+++ b/src/AppBundle/Resources/views/Calculator/ocenkaClirensaCreatinina.html.twig
@@ -56,7 +56,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="col-sm-3 control-label">Рузельтат:</label>
+                    <label class="col-sm-3 control-label">Результат:</label>
                     <div class="col-sm-9">
                         <input size="40" readonly="" name="result" class="form-control">
                     </div>
