--- a/src/AppBundle/Resources/views/Mail/register_confirmed.html.twig
+++ b/src/AppBundle/Resources/views/Mail/register_confirmed.html.twig
@@ -8,6 +8,9 @@
 
 {#{% block body_text %}#}
 <html>
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+</head>
 <body style="font-family: Arial, Tahoma, sans-serif; background: url('http://medalmanah.ru/bundles/app/images/light_toast.png')" background="http://medalmanah.ru/bundles/app/images/light_toast.png" bgcolor="#EEE">
 <table style="width: 600px" width="600" cellpadding="0" cellspacing="0">
 	<tr>
