--- a/app/Resources/FOSUserBundle/views/Resetting/email.html.twig
+++ b/app/Resources/FOSUserBundle/views/Resetting/email.html.twig
@@ -24,7 +24,7 @@
 						<a href="{{ url('homepage') }}" style="color: #444; text-decoration: none">МЫ ОТКРЫЛИСЬ!</a>
 					</td>
 					<td style="text-align: right" align="right">
-						<a href="{{ url('homepage') }}"><img src="{{ asset('bundles/app/images/logo.png') }}" style="width: 150px" width="150"></a>
+						<a href="{{ url('homepage') }}"><img src="https://medalmanah.ru{{ asset('bundles/app/images/logo.png') }}" style="width: 150px" width="150"></a>
 					</td>
 				</tr>
 			</table>
