--- a/src/AppBundle/Resources/views/Mail/register_confirmed.html.twig
+++ b/src/AppBundle/Resources/views/Mail/register_confirmed.html.twig
@@ -1,12 +1,12 @@
-{#{% trans_default_domain 'FOSUserBundle' %}#}
+{% trans_default_domain 'FOSUserBundle' %}
 
-{#{% block subject %}#}
-    {#{% autoescape false %}#}
-        {#{{ 'resetting.email.subject'|trans }}#}
-    {#{% endautoescape %}#}
-{#{% endblock %}#}
+{% block subject %}
+    {% autoescape false %}
+        {{ 'resetting.email.subject'|trans }}
+    {% endautoescape %}
+{% endblock %}
 
-{#{% block body_text %}#}
+{% block body_html %}
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -86,6 +86,6 @@
 {#{% autoescape false %}#}
         {#{{ 'resetting.email.message'|trans({'%username%': user.username, '%confirmationUrl%': confirmationUrl}) }}#}
     {#{% endautoescape %}#}
-{#{% endblock %}#}
+{% endblock %}
 
 {#{% block body_html %}{% endblock %}#}
