--- a/src/AppBundle/Resources/views/Publication/publication.html.twig
+++ b/src/AppBundle/Resources/views/Publication/publication.html.twig
@@ -83,19 +83,19 @@
                         ></div>
                     </div>
                     <div class="col-sm-4 hidden-xs">
-                        {#{% if publication.specialties | length > 0 %}#}
-                            {#<b>Специальности:</b>#}
-                            {#{% set ss = '' %}#}
-                            {#{% for s in publication.specialties  %}#}
-                                {#{% set ss = ss~s.title %}#}
-                                {#{% if s != publication.specialties | last %}#}
-                                    {#{% set ss = ss~', ' %}#}
-                                {#{% endif %}#}
-                            {#{% endfor %}#}
-                            {#<span title="{{ ss }}">#}
-                            {#{{ ss }}#}
-                        {#</span>#}
-                        {#{% endif %}#}
+                        {% if publication.specialties | length > 0 %}
+                            <b>Специальности:</b>
+                            {% set ss = '' %}
+                            {% for s in publication.specialties  %}
+                                {% set ss = ss~s.title %}
+                                {% if s != publication.specialties | last %}
+                                    {% set ss = ss~', ' %}
+                                {% endif %}
+                            {% endfor %}
+                            <span title="{{ ss }}">
+                            {{ ss }}
+                        </span>
+                        {% endif %}
                     </div>
                     <div class="col-sm-3 text-right">
                         <div style="padding-top: 10px; padding-bottom: 6px">
